--- a/index.html
+++ b/index.html
@@ -15,7 +15,50 @@
 
 </head>
 <body>
-    <!-- Navbar Start-->
+    <!-- START PRELOADER -->
+    <div id="loader-wrapper" class="fixed top-0 bottom-0 w-full h-full bg-white flex justify-center items-center z-9999 visible transition-all duration-500 font-jakarta bg-linear-180/oklch from-[#1C1E32] via-[#395B99] to-[#2D1D70]">
+        <span class="absolute w-[100px] h-[100px] sm:w-[180px] sm:h-[180px] md:w-[230px] md:h-[230px] lg:w-[270px] lg:h-[270px] xl:w-[300px] xl:h-[300px] bg-gradient-to-b from-blueLogo to-purpleLogo rounded-full flex items-center custom-shadow opacity-30">
+            <img src="assets/images/icons/mirip-react.svg" alt="img" width="59" height="59" class="atom-spin w-full" />
+        </span>
+        <img src="assets/images/objects/blob-left-preload.svg" alt="img" class="absolute top-0 left-0 w-[200px] sm:w-[250px] md:w-[300px] lg:w-[430px]" />
+        <h1 class="text-5xl md:text-6xl lg:text-7xl xl:text-8xl text-white text-center tracking-tighter font-extrabold leading-7 sm:leading-8 md:leading-11 xl:leading-15 z-1">HIMTIKA <span class="block">Goes To Company</span></h1>
+        <img src="assets/images/objects/blob-right-preload.svg" alt="img" class="absolute bottom-0 right-0 w-[200px] sm:w-[250px] md:w-[300px] lg:w-[430px]" />
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        
+    </div>
+    <!-- END PRELOADER -->
+    <!-- START NAVBAR -->
     <nav id="navbar" class="w-full absolute top-0 left-0 px-6 py-4 text-white z-25 transition-all duration-500 sm:px-16 lg:px-18 lg:py-5 font-jakarta bg-linear-90/oklch from-darkPurple/50 to-purple/50 backdrop-blur-lg">
         <div class="flex justify-between items-center selection:bg-white selection:text-purple">
             <a href="#home" class="font-semibold text-2xl md:text-3xl lg:text-4xl transition-all duration-500 flex items-center gap-4 sm:gap-6 md:gap-9">
@@ -93,7 +136,7 @@
             </div>
         </div>
     </nav>
-    <!-- Navbar End-->
+    <!-- END NAVBAR -->
         
     <!-- START HERO SECTION -->
     <section id="landing-page" class="text-center h-full w-full pt-32 bg-linear-45/oklch from-purpleHero to-darkPurple relative transition-all duration-500 selection:bg-purple selection:text-white">
