--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>HGTC 2025 ー HIMTIKA ー Himpunan Mahasiswa Informatika</title>
 
     <!-- ICON -->
-    <link rel="icon" href="assets/images/icons/footer.png"/>
+    <link rel="icon" href="assets/images/icons/atom-hgtc.svg"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
 
     <!-- CSS -->
