update href navbar

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     id="nav-menu">
                     <ul class="block lg:flex lg:gap-[70px] font-jakarta text-center">
                         <li>
-                            <a href="#about" class="w-full py-1 lg:py-0 lg:w-auto text-center group block cursor-pointer transition duration-300">
+                            <a href="/" class="w-full py-1 lg:py-0 lg:w-auto text-center group block cursor-pointer transition duration-300">
                                 <span class="inline-block font-[Plus Jakarta Sans] py-1 lg:py-0 font-medium text-xl lg:text-white
                                             bg-gradient-to-b from-[#2A049C] to-[#5F29FF] 
                                             bg-clip-text text-transparent border-b-2 border-transparent 
@@ -108,7 +108,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#about" class="w-full py-1 lg:py-0 lg:w-auto text-center group block cursor-pointer transition duration-300">
+                            <a href="#documentation" class="w-full py-1 lg:py-0 lg:w-auto text-center group block cursor-pointer transition duration-300">
                                 <span class="inline-block font-[Plus Jakarta Sans] py-1 lg:py-0 font-medium text-xl lg:text-white
                                             bg-gradient-to-b from-[#2A049C] to-[#5F29FF] 
                                             bg-clip-text text-transparent border-b-2 border-transparent 
@@ -120,7 +120,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#about" class="w-full py-1 lg:py-0 lg:w-auto text-center group block cursor-pointer transition duration-300">
+                            <a href="#faq" class="w-full py-1 lg:py-0 lg:w-auto text-center group block cursor-pointer transition duration-300">
                                 <span class="inline-block font-[Plus Jakarta Sans] py-1 lg:py-0 font-medium text-xl lg:text-white
                                             bg-gradient-to-b from-[#2A049C] to-[#5F29FF] 
                                             bg-clip-text text-transparent border-b-2 border-transparent 
@@ -437,7 +437,7 @@
     <!-- END LIVE SECTION -->
 
     <!-- START DOKUMENTASI -->
-    <section class="sm:px-16 px-7 lg:px-18 py-20 lg:py-56 bg-linear-90/oklch from-darkPurple to-purpleAbout relative transition-all duration-500 selection:bg-purple selection:text-white">
+    <section id="documentation" class="sm:px-16 px-7 lg:px-18 py-20 lg:py-56 bg-linear-90/oklch from-darkPurple to-purpleAbout relative transition-all duration-500 selection:bg-purple selection:text-white">
         <div class="flex items-center justify-center">
             <div class="w-full font-jakarta">
                 <div class="mb-10 relative">
@@ -997,7 +997,7 @@
     <!-- END LIVE SECTION -->
 
     <!-- START FAQ SECTION -->
-    <section class="px-6 sm:px-16 lg:px-18 py-35 lg:py-56 xl:py-70 bg-[#100521] relative transition-all duration-500 selection:bg-purple selection:text-white">
+    <section id="faq" class="px-6 sm:px-16 lg:px-18 py-35 lg:py-56 xl:py-70 bg-[#100521] relative transition-all duration-500 selection:bg-purple selection:text-white">
         <img src="assets/images/objects/blob-left.svg" alt="img" class="absolute top-10 left-0 w-[200px] sm:w-[250px] md:w-[300px] lg:w-[430px]" />
         <div class="font-jakarta text-center">
             <h1 class="text-4xl sm:text-5xl md:text-6xl xl:text-[64px] font-bold bg-linear-180/oklch from-blueLogo to-purpleTextLogo bg-clip-text text-transparent leading-10 md:leading-15 lg:leading-19 xl:leading-20 glow-purple">Frequently Asked Question</h1>
