adjust position of backtohimtika button

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <img src="assets/images/objects/blob-left.svg" alt="blob-left" class="absolute top-10 left-0 w-[200px] sm:w-[250px] md:w-[300px] lg:w-[430px]" />
             <div class="font-jakarta text-center w-5/6" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl xl:text-[80px] sm:leading-14 md:leading-18 lg:leading-24 font-bold bg-linear-180/oklch from-blueLogo to-purpleTextLogo bg-clip-text text-transparent glow-purple">Apa itu HGTC?</h1>
-                <p class="text-lg sm:text-xl md:text-2xl xl:text-3xl leading-6 sm:leading-7 md:leading-8 lg:leading-9 xl:leading-10 font-normal text-white text-center xl:text-justify mt-7 md:mt-10 lg:mt-13">Merupakan kegiatan akademis yang diorganisir oleh HIMTIKA. Kegiatan ini melibatkan kunjungan mahasiswa ke perusahaan dengan tujuan meningkatkan pemahaman mendalam tentang dunia kerja. HGTC menjadi sarana pembelajaran yang efektif, memberikan kesempatan bagi mahasiswa untuk terlibat langsung dalam pengalaman dunia nyata!</p>
+                <p class="text-sm sm:text-lg md:text-xl xl:text-2xl leading-5 sm:leading-7 md:leading-8 lg:leading-9 xl:leading-10 font-normal text-white text-center xl:text-justify mt-7 md:mt-10 lg:mt-13">Merupakan kegiatan akademis yang diorganisir oleh HIMTIKA. Kegiatan ini melibatkan kunjungan mahasiswa ke perusahaan dengan tujuan meningkatkan pemahaman mendalam tentang dunia kerja. HGTC menjadi sarana pembelajaran yang efektif, memberikan kesempatan bagi mahasiswa untuk terlibat langsung dalam pengalaman dunia nyata!</p>
             </div>
             <img src="assets/images/objects/blob-right.svg" alt="blob-right" class="absolute bottom-15 right-0 md:bottom-10 lg:-bottom-8 lg:right-0 z-1 w-[200px] sm:w-[300px] md:w-[400px] lg:w-[600px]" />
         </div>
@@ -1101,35 +1101,35 @@
                     <!-- kolom 1  -->
                     <div class="w-full mb-8 text-white flex justify-center sm:justify-start lg:justify-start transition-all duration-500 z-2">
                         <div>
-                            <h3 class="font-bold text-white text-xl mb-6">
+                            <h3 class="font-bold text-white text-xl mb-4 md:mb-6">
                             Media
                             </h3>
                             <ul class="text-base">
                                 <li>
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >Berita
                                     </a>
                                 </li>
                                 <li>
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >Artikel HIMTIKA
                                     </a>
                                 </li>
                                 <li>
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >Beasiswa
                                     </a>
                                 </li>
                                 <li>
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >Kegiatan Mahasiswa
                                     </a>
                                 </li>
@@ -1140,13 +1140,13 @@
                     <!-- kolom 2 -->
                     <div class="w-full mb-8 font-[Plus Jakarta Sans] text-white flex justify-center transition-all duration-500 z-2">
                         <div>
-                            <h3 class="font-bold text-white text-xl mb-6">Event</h3>
+                            <h3 class="font-bold text-white text-xl mb-4 md:mb-6">Event</h3>
                             <ul class="text-base">
                                 <li>
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/open-project/"
                                         target="_blank"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >Open Project
                                     </a>
                                 </li>
@@ -1154,7 +1154,7 @@
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/hgtc/"
                                         target="_blank"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >HGTC
                                     </a>
                                 </li>
@@ -1162,7 +1162,7 @@
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/semantik_9/"
                                         target="_blank"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >SEMANTIK 9.0
                                     </a>
                                 </li>
@@ -1170,35 +1170,35 @@
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/studyclub-2024/"
                                         target="_blank"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >Study Club
                                     </a>
                                 </li>
                                 <li>
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/pekan_it/"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >PEKAN IT
                                     </a>
                                 </li>
                                 <li>
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/lkmmpd/"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >LKMM-PD
                                     </a>
                                 </li>
                                 <li>
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/diesnatalis/"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >Diesnatalis
                                     </a>
                                 </li>
                                 <li>
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/it-bootcamp/"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >IT Bootcamp
                                     </a>
                                 </li>
@@ -1209,49 +1209,49 @@
                     <!-- kolom 3 -->
                     <div class="w-full mb-8 font-[Plus Jakarta Sans] text-white flex justify-center sm:justify-end lg:justify-end transition-all duration-500 z-2">
                         <div>
-                            <h3 class="font-bold text-white text-xl mb-6">
+                            <h3 class="font-bold text-white text-xl mb-4 md:mb-6">
                             Aplikasi Publik
                             </h3>
                             <ul class="text-base">
                                 <li>
                                     <a
                                         href="https://himtalks.vercel.app/himtalks"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >HIMTALKS
                                     </a>
                                 </li>
                                 <li>
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/hikode/"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >Hikode
                                     </a>
                                 </li>
                                 <li>
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/kalendar/"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >Kalender
                                     </a>
                                 </li>
                                 <li>
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/corporation/"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >Corporation
                                     </a>
                                 </li>
                                 <li>
                                     <a
                                         href="#game"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >Studio IT
                                     </a>
                                 </li>
                                 <li>
                                     <a
                                         href="https://himtika.cs.unsika.ac.id/dosen/"
-                                        class="inline-block text-base mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
+                                        class="inline-block text-sm sm:text-base mb-2 md:mb-4 hover:scale-125 hover:text-purpleTextLogo antialiased transform will-change-transform origin-left transition-all duration-500"
                                         >Profil Tenaga Pendidik
                                     </a>
                                 </li>
@@ -1279,7 +1279,7 @@
     </footer>
     <!-- END FOOTER SECTION -->
 
-    <div class="fixed bottom-8 right-9 z-10">
+    <div class="fixed bottom-5 right-5 md:bottom-8 md:right-9 z-10">
         <a href="https://himtika.cs.unsika.ac.id/">
             <button class="Btn">
                 <div class="sign">
